package patterns.structural.proxy;

public interface Basbakan {
	
	public void dertDinle(String dert);
	
	public void isBul(String yakinim);

}
